...
          ],
        ),
        titleSpacing: 25.0,
        toolbarHeight: 70,
        leading: Builder(
          builder: (context) => IconButton(
            key: Key('Drawer'),
            onPressed: () {
              Scaffold.of(context).openDrawer();
            },
            alignment: Alignment.topLeft,
            icon: const Icon(Icons.menu, size: 35, color: Colors.indigo),
          ),
...
                  size: 500, color: Colors.indigo.shade100),
              height: 220,
            ),
            ListTile(
              leading: Icon(Icons.event, color: Colors.indigo, size: 45),
              title: const Text(
                key: Key('My Events'),
                'My Events',
                style: TextStyle(
                    fontSize: 50,
                    fontFamily: "Lobster",
                    fontWeight: FontWeight.bold,
                    color: Colors.indigo),
...
      body: Stack(
        key: Key('HomePage'),
        children: [
          Column(
            children: [
              GestureDetector(
                key: Key('createEventButton'),
                onTapDown: (_) {
                  setState(() {
                    _isPressed = true;
                    if(online){
                    Navigator.pushNamed(context,'/GiftOrEvent');}
                  });
                },
                onTapUp: (_) {
                  setState(() {
                    _isPressed = false;
                  });
...
