...
              onTap: () {
                Navigator.pushNamed(context, '/AddGift');
              },
            ),
          ),
          Expanded(
            key: Key('addEventButton'),
            child: _buildListItem(
              context: context,
              title: 'Add Event',
              imageUrl: 'https://i.imgur.com/jLGe4Yi.jpg', // Corrected direct link
              onTap: () {
                Navigator.pushNamed(context, '/AddEvent');
...
